# well-worn-tools

./: README.md  pyproject.toml
.claude/skills/address-feedback/: SKILL.md
.claude/skills/apple-to-android-port-spec/: SKILL.md
.claude/skills/apple-to-android-port-spec/references/: inventory-checklist.md  platform-mapping.md  spec-template.md
.claude/skills/await-claude-review/: SKILL.md
.claude/skills/backlog-grooming/: SKILL.md
.claude/skills/bug-squashing-methodology/: SKILL.md
.claude/skills/collect-skills/: SKILL.md
.claude/skills/collect-skills/references/: adaptation-rules.md
.claude/skills/collect-skills/scripts/: adapt.py  discover.py  fetch.py
.claude/skills/comprehensive-pr-review/: SKILL.md
.claude/skills/cve-remediation/references/: registry-lookups.md
.claude/skills/discord-ralph-recap/: SKILL.md
.claude/skills/discord-ralph-recap/assets/: ralph-recap.yml
.claude/skills/discord-ralph-recap/references/: metrics.md
.claude/skills/discord-ralph-recap/scripts/: recap.py  stats.py
.claude/skills/distribute-skills/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/stay-green/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/testing/references/: examples.md  (+1 more)
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  iteration-trigger.yml  metrics.yml
git-issues/: COMMIT_claude-review-write-perms.md  PR_claude-review-write-perms.md
tests/: conftest.py  test_collect_adapt.py  test_distribute_discover.py  test_distribute_helpers.py  test_ralph_recap_stats.py
(+7 files in other folders)
