[project]
name = "well-worn-tools"
version = "0.0.0"
description = "Curated collection of Claude Code skills."
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "PLR0912",  # too many branches - argparse-driven mains naturally branch
    "PLR0915",  # too many statements - same
    "PLR2004",  # magic value comparisons - acceptable in tests
    "PLR0913",  # too many args - CLI helpers take legitimately many args
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # asserts are how pytest works
    "PLR0913",
]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
namespace_packages = true
mypy_path = [
    ".claude/skills/distribute-skills/scripts",
    ".claude/skills/collect-skills/scripts",
    ".claude/skills/discord-ralph-recap/scripts",
    "tests",
]

[[tool.mypy.overrides]]
module = ["yaml", "pytest", "anthropic"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
